--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
         <div id="timeDisplay"></div>
 
 <div id="timeDisplay"></div>
-<audio autoplay loop>
+<!-- <audio autoplay loop>
     <source src="2.mp3" type="audio/mpeg">
     <source src="" type="audio/ogg">
 
-</audio>
+</audio> -->
 
 
 
